SET(MODULE_LIBS
	"zae-core${LIB_EXTENSION_SHARED}"
	"zae-engine${LIB_EXTENSION_SHARED}"
)

SET(CPP_NAME "EngineTest.cpp")
SET(AppMain "EngineTest")

FUNCTION(exampleTestApplication AppMain CPP_NAME MODULE_LIBS)

	FILE(GLOB_RECURSE LIB_TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

	ADD_EXECUTABLE(${AppMain} ${CPP_NAME})
	TARGET_SOURCES(${AppMain} PRIVATE ${LIB_TEST_FILES})
	SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD ${ZAE_CXX_STANDARD})
	SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD_REQUIRED ON)
	TARGET_INCLUDE_DIRECTORIES(${AppMain} PUBLIC "${PROJECT_SOURCE_DIR}/thirdparty/doctest/doctest")

	FOREACH(library IN LISTS MODULE_LIBS)
		TARGET_LINK_LIBRARIES(${AppMain} PRIVATE ${library})
	ENDFOREACH()

ENDFUNCTION()

ADD_SUBDIRECTORY(Engine)